# glyphx-sgx

./: .gitattributes  .gitignore  .vimspector.json  CMakeLists.txt  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build.bat  synglyphx_x.icns
ANTzCore/: ANTzCore.h  ANTzCore.vcxproj  ANTzCore.vcxproj.filters  CMakeLists.txt  ReadMe.txt  npctrl.c  npctrl.h  npdata.c  npdata.h  npui.c  npui.h  stdafx.cpp
ANTzGUI/: ANTzGUI.vcxproj  ANTzGUI.vcxproj.filters  CMakeLists.txt  antzforestwidget.cpp  antzforestwidget.h  antzgui_global.h  antzsingleglyphtreemodel.cpp  antzsingleglyphtreemodel.h  antzsingleglyphtreewidget.cpp  antzsingleglyphtreewidget.h  antzwidget.cpp  antzwidget.h  glyphforestmodel.cpp  glyphforestmodel.h  glyphmimedata.cpp  glyphmimedata.h  glyphtreemodel.cpp  glyphtreemodel.h  minmaxglyph3dwidget.cpp  minmaxglyph3dwidget.h  minmaxglyphtreemodel.cpp  minmaxglyphtreemodel.h
DataEngine/: CMakeLists.txt  DataEngine.vcxproj  DataEngine.vcxproj.filters  DataEngine_Exports.h  ReadMe.txt  dataengineconnection.cpp  dataengineconnection.h  dataenginestatement.cpp  dataenginestatement.h  downloadedmap.cpp  downloadedmap.h  downloadexception.h  glyphengine.cpp  glyphengine.h  networkdownloader.cpp  networkdownloader.h
DataMapper/: CMakeLists.txt  DMGlobal.cpp  DMGlobal.h  DMServices.cpp  DMServices.h  DataMapper.rc  DataMapper.sln  DataMapper.vcxproj  DataMapper.vcxproj.filters  DataMappingListView.cpp  DataMappingListView.h  FilterSetupWidget.cpp  FilterSetupWidget.h  LinksDialog.cpp  LinksDialog.h  LinksListView.h  Linkslistview.cpp  QueryBuilderDialog.cpp  QueryBuilderDialog.h  adddatabaseserverdialog.cpp  adddatabaseserverdialog.h  adddatabaseserverwizard.cpp  adddatabaseserverwizard.h  addfiledatasourcewizard.cpp  addfiledatasourcewizard.h  aliaseswidget.cpp  aliaseswidget.h  baseimagedialog.cpp  baseimagedialog.h  baseobjectlistview.cpp  baseobjectlistview.h  bindinglineedit.cpp  bindinglineedit.h  clog.txt  databaseservices.cpp  databaseservices.h  databindingtableswidget.cpp  databindingtableswidget.h  databindingwidget.cpp  databindingwidget.h  (+59 more)
GlyphDesigner/: CMakeLists.txt  GDGlobal.cpp  GDGlobal.h  GDServices.cpp  GDServices.h  GlyphDesigner.rc  GlyphDesigner.sln  GlyphDesigner.vcxproj  GlyphDesigner.vcxproj.filters  addchildrendialog.cpp  addchildrendialog.h  antzwidget.cpp  antzwidget.h  glyphdesignerwindow.cpp  glyphdesignerwindow.h  glyphdesignerwindow.qrc  glyphmimedata.h  glyphtreemodel.cpp  glyphtreemodel.h  glyphtreeview.cpp  glyphtreeview.h  main.cpp  modalglyphwidget.cpp  modalglyphwidget.h  sgx_internal.lic  sharedactionmanager.cpp  sharedactionmanager.h  singleglyphdialog.cpp  singleglyphdialog.h  singleglyphwidget.cpp  singleglyphwidget.h
GlyphViewer/: .gitignore  CMakeLists.txt  DistinctValueFilteringParameters.cpp  DistinctValueFilteringParameters.h  FilteringTable.cpp  FilteringTable.h  GVGlobal.cpp  GVServices.cpp  GVServices.h  GlyphViewer.rc  GlyphViewer.sln  GlyphViewer.vcxproj  GlyphViewer.vcxproj.filters  HomePageWidget.cpp  HomePageWidget.h  LoadingFilterDialog.h  LoadingFilterWidget.cpp  LoadingFilterWidget.h  MultiLoadingFilterWidget.cpp  MultiLoadingFilterWidget.h  SharedViewsWidget.cpp  SharedViewsWidget.h  SharedVisualizationsWidget.cpp  SharedVisualizationsWidget.h  antzimportdialog.cpp  antzimportdialog.h  antzviewerwidget.cpp  antzviewerwidget.h  cachemanager.cpp  cachemanager.h  changedatasourcefiledialog.cpp  changedatasourcefiledialog.h  datamappingloadingfiltermodel.cpp  datamappingloadingfiltermodel.h  dmlog.txt  elasticlistswidget.cpp  elasticlistswidget.h  filteredsourcedatawidget.cpp  filteredsourcedatawidget.h  filteringmanager.cpp  (+59 more)
MapDownloading/: CMakeLists.txt  MapDownloading.vcxproj  MapDownloading.vcxproj.filters  downloadedmap.cpp  downloadedmap.h  downloadexception.cpp  downloadexception.h  downloadoptionsdialog.cpp  downloadoptionsdialog.h  geographicboundingbox.cpp  geographicboundingbox.h  mapdownloading.cpp  mapdownloading.h  mapdownloading_global.h  mapoptionswidget.cpp  mapoptionswidget.h  networkdownloader.cpp  networkdownloader.h  typedefs.h
SGXDataMapping/: Alias.h  CMakeLists.txt  FrontEndFilter.h  Link.cpp  Link.h  SGXDataMapping.vcxproj  SGXDataMapping.vcxproj.filters  databaseserverdatasource.cpp  databaseserverdatasource.h  datamappingdefaults.cpp  datamappingdefaults.h  datamappingfunction.cpp  datamappingfunction.h  datamappingglyph.cpp  datamappingglyph.h  datamappingglyphfile.cpp  datamappingglyphfile.h  datamappingglyphgeometry.cpp  datamappingglyphgeometry.h  datamappingglyphgraph.cpp  datamappingglyphgraph.h  datamappingproperty.cpp  datamappingproperty.h  datamappingvirtualtopology.cpp  datamappingvirtualtopology.h  datasource.cpp  datasource.h  datasourcemaps.cpp  datasourcemaps.h  datasourcetable.cpp  datasourcetable.h  datatransformmapping.cpp  datatransformmapping.h  filedatasource.cpp  filedatasource.h  inputbinding.cpp  inputbinding.h  inputcombinationfunction.cpp  inputcombinationfunction.h  inputfield.cpp  (+24 more)
SGXDataTransform/: CMakeLists.txt  SGXDataTransform.vcxproj  SGXDataTransform.vcxproj.filters  baseimage.cpp  baseimage.h  baseimageproperties.cpp  baseimageproperties.h  csvcache.cpp  csvcache.h  databaseinfo.cpp  databaseinfo.h  databaseservices.cpp  databaseservices.h  datamapping.cpp  datamapping.h  datamappingdefaults.cpp  datamappingdefaults.h  datamappingfunction.cpp  datamappingfunction.h  datamappingfunctionstrategy.cpp  datamappingfunctionstrategy.h  datamappingglyph.cpp  datamappingglyph.h  datamappingglyphfile.cpp  datamappingglyphfile.h  datamappingglyphgeometry.cpp  datamappingglyphgeometry.h  datamappingglyphgraph.cpp  datamappingglyphgraph.h  datamappingglyphgraphexportvisitor.h  datamappingproperty.cpp  datamappingproperty.h  datamappingvirtualtopology.h  datasource.cpp  datasource.h  datasourcemaps.cpp  datasourcemaps.h  datatransform.cpp  datatransform.h  datatransformmapping.cpp  (+49 more)
SGXDataTransformGUI/: CMakeLists.txt  SGXDataTransformGUI.vcxproj  SGXDataTransformGUI.vcxproj.filters  bindinglineedit.cpp  bindinglineedit.h  changedatasourcefiledialog.cpp  (+35 more)
(+2463 files in other folders)
